terraform/database.tf
resource "aws_db_subnet_group" "db_subnet_group" {
  name       = "db_subnet_group"
  subnet_ids = [aws_subnet.customer_public_subnet_a.id, aws_subnet.customer_public_subnet_b.id, aws_subnet.admin_public_subnet_c.id]

}

resource "aws_security_group" "db_sg" {
  name   = "emovie_db_sg"
  vpc_id = aws_vpc.emovie_vpc.id
}

resource "aws_vpc_security_group_ingress_rule" "db_ingress_pgsql" {
  security_group_id = aws_security_group.db_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 5432
  ip_protocol       = "tcp"
  to_port           = 5432
}

resource "aws_vpc_security_group_egress_rule" "db_egress_pgsql" {
  security_group_id = aws_security_group.db_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 5432
  ip_protocol       = "tcp"
  to_port           = 5432
}

resource "aws_db_parameter_group" "db_emovie" {
  name   = "emovie-db"
  family = "postgres16"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "default" {
  allocated_storage      = 10
  db_name                = var.db_name
  engine                 = "postgres"
  engine_version         = "16.2"
  instance_class         = "db.t3.micro"
  identifier             = "db-emovie"
  username               = var.db_user
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name
  parameter_group_name   = aws_db_parameter_group.db_emovie.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
  publicly_accessible    = true
  skip_final_snapshot    = true
}
